client/src/app.css
:root {
    --dark: black;
    --light: white;
    --transparent: rgba(255, 255, 255, 0);
  }

  .App {
    text-align: center;
  }
  
  html, body {
    height: 100%;
    width: 100%;
    margin: 0%;
    overflow-x: hidden;
    color: var(--light);
  }

  body {
    padding-bottom: 85px;
  }

  .icon {
    padding-left: 10px;
    font-size: 20px;
  }
  
  .heroImage {
    background-image: url('./images/geran-de-klerk-qzgN45hseN0-unsplash.jpg');
    background-repeat:repeat;
    background-size: cover;
    background-position: center;
    height: 100vh;
    width: 100vw;
    position: absolute;
    z-index: -1;
    top: 0;
  }
  
  .overlay {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background-image:linear-gradient(var(--transparent), var(--dark));
    opacity: 1;
    z-index: 1;
  }
  
  .navbar {
    border-bottom: 2px var(--light) solid;
    font-size: large;
    color: var(--dark);
    font-weight: 500;
  }
  
  .navLink {
    text-decoration: none;
  }
  
  .navLink:hover {
    text-decoration: none;
  }
  
  form {
    background-color: var(--light);
    color: var(--dark);
    border-radius: 5px;
    height: 100%;
    padding: 10px;
  }

  .btn-dark {
    border: 2px solid var(--light);
    background-color: var(--transparent);
  }

  .btn-dark:hover {
    background-color: rgba(255, 255, 255, 0.171);
    border: 2px solid var(--transparent);
  }

  .form-btn {
    border: 2px solid grey;
    color: var(--dark);
    background-color: var(--transparent);
  }

  .form-btn:hover {
    border: 2px solid var(--transparent);
    background-color: var(--transparent);
    color: var(--dark);
  }
  
  #hamburgerIcon {
    font-size: 30px;
    color: var(--light);
  }
  
  .fa {
    font-size: 40px;
    padding: 5px;
  }

  footer {
    margin-top: 20px;
    background-color: rgba(0, 0, 0, 0.699);
    border-top: 2px var(--light) solid;
    align-items: center;
    width: 100vw;
    padding-top: 10px;
  }
  
  .icon {
    font-size: 30px;
    color: var(--light);
  }
  
  footer a :hover {
    color: yellow;
  }
  
  .imageStyle {
    width:100%;
    height: 25%;
    object-fit: cover;
  }
  
  .App-logo {
    height: 40vmin;
    pointer-events: none;
  }
  
  @media (prefers-reduced-motion: no-preference) {
    .App-logo {
      animation: App-logo-spin infinite 20s linear;
    }
  }
  
  .App-header {
    background-color: #282c34;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
  }
  
  .App-link {
    color: #61dafb;
  }
  
  @keyframes App-logo-spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }  

